<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <TextView
        android:id="@+id/header_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/rounded_background"
        android:backgroundTint="@color/primary_color"
        android:padding="@dimen/padding_medium"
        android:text="@string/review_information_header"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_medium"/>

    <TableLayout
        android:id="@+id/info_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_text"
        android:layout_marginTop="@dimen/margin_small"
        android:padding="@dimen/padding_small"
        android:stretchColumns="1">

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_name"
                android:textStyle="bold"
                android:padding="@dimen/padding_small" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country"
                android:textStyle="bold"
                android:padding="@dimen/padding_small" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textStyle="bold"
                android:padding="@dimen/padding_small" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_info"
                android:textStyle="bold"
                android:padding="@dimen/padding_small" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btn_add"
        android:layout_width="67dp"
        android:layout_height="75dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:layout_marginTop="@dimen/margin_large"
        android:backgroundTint="@color/primary_color"
        android:text="@string/fab_plus"
        android:textSize="@dimen/text_size_medium" />
</RelativeLayout>
