<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <!-- Header -->
    <TextView
        android:id="@+id/header_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:background="@drawable/rounded_background"
        android:backgroundTint="@color/primary_color"
        android:padding="@dimen/padding_medium"
        android:text="@string/sender_details_header"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_large" />

    <EditText
        android:id="@+id/receiver_email"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_below="@id/header_text"
        android:layout_marginTop="@dimen/margin_medium"
        android:backgroundTint="@color/white"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_background"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/receiver_name"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_below="@id/receiver_email"
        android:layout_marginTop="@dimen/margin_small"
        android:backgroundTint="@color/white"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_background"
        android:hint="@string/full_name" />

    <EditText
        android:id="@+id/receiver_contact"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_below="@id/receiver_name"
        android:layout_marginTop="@dimen/margin_small"
        android:backgroundTint="@color/white"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_background"
        android:hint="@string/contact_info" />

    <EditText
        android:id="@+id/receiver_country"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_below="@id/receiver_contact"
        android:layout_marginTop="@dimen/margin_small"
        android:backgroundTint="@color/white"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_background"
        android:hint="@string/country" />

    <EditText
        android:id="@+id/receiver_address"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_below="@id/receiver_country"
        android:layout_marginTop="@dimen/margin_small"
        android:backgroundTint="@color/white"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_background"
        android:hint="@string/address" />

    <!-- Centered Next Button -->
    <Button
        android:id="@+id/btn_next_receiver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_large"
        android:backgroundTint="@color/primary_color"
        android:text="@string/button_next" />
</RelativeLayout>
